Closed Bug 583865 Opened 15 years ago Closed 15 years ago

Latest xulrunner doesn't compile with Maemo 6 defined

Categories

(Toolkit Graveyard :: Build Config, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jukka.miettinen, Unassigned)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.8) Gecko/20100723 Ubuntu/10.04 (lucid) Firefox/3.6.8 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.8) Gecko/20100723 Ubuntu/10.04 (lucid) Firefox/3.6.8 See bug 562897, it broke the build at least by including a header file -- nsIGenericFactory.h -- that doesn't exist anymore. I'm trying to come up with a diff that will solve this issue (and maybe other issues that are hidden still) Reproducible: Always Steps to Reproduce: 1. Clone latest xulrunner 2. Add these lines to mozconfig: ac_add_options --enable-default-toolkit=cairo-qt ac_add_options --with-maemo-version=6 ac_add_options --enable-meegotouch 3. Try to compile Actual Results: Compilation fails with 'mozilla-central/uriloader/exthandler/nsContentHandlerApp.cpp:42:31: error: nsIGenericFactory.h: No such file or directory' Expected Results: Xulrunner should compile with Maemo 6 defined
Component: File Handling → Build Config
Product: Firefox → Toolkit
QA Contact: file.handling → build-config
Version: unspecified → Trunk
Blocks: 562897
Attachment #462210 - Flags: review?(doug.turner)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 462210 [details] [diff] [review] Xulrunner compiles once again with Maemo 6 defined Simple change, by new XPCOM switch template
Attachment #462210 - Flags: review?(doug.turner) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: