Bug 583865 - Latest xulrunner doesn't compile with Maemo 6 defined. r=romaxa. approval=dougt. maemo build bustage fix